remove unused config and file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 
-server.port=9090
+server.port=8080
 
-#keycloak.auth-server-url=http://localhost:8080/auth/
 keycloak.auth-server-url=https://sso-sso-erfin.apps.mamat0.sandbox470.opentlc.com/auth
 keycloak.realm=demo
+
+#use confidential mode
+keycloak.public-client=false
 keycloak.resource=springboot-web
 keycloak.credentials.secret=201d87e1-6e8c-4bb9-a0b4-d4c1ee4aac90
-#keycloak.credentials.secret=95efbe8e-2b87-4678-ab9a-4c19a7e39263
-keycloak.public-client=false
 
-#do not do on production. bypass selfsigned SSL on keycloak server
+#do not do this on production. bypass selfsigned SSL on keycloak server
 keycloak.disable-trust-manager=true
 keycloak.allow-any-hostname=true
 
